# CommoBackend

./: .env_n8n  README.md  docker-compose.yml  main2.py  n8n.yaml  pyproject.toml
back/: router.py
back/admin/: __init__.py  signal.py
back/api/: city.py  factory.py  geo.py  graph.py  invites.py  search.py
back/core/: embedings.py  search.py
back/core/clients/: openai.py
back/graphs/: community.py  get_data.py  make_community.py  make_example.py  member.py
back/migrations/: 0001_initial.py
back/models/: factory.py  signal.py
back/schemas/: base.py  city.py  location.py  request.py  user.py
back/static/: headcanvas.js  map.js
back/templates/: admin_osm.html  map.html
back/tests/api/: test_city.py
bots/: community.py
compose/nginx/: api2.conf  app.conf
compose/postgres/: Dockerfile  DockerfileGis
config/: asgi.py  auth_fief.py  envs.py  settings.py  wsgi.py
front/: graph.html
